--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-DJANGO_LOGLEVEL=
-DJANGO_SECRET_KEY=
-DJANGO_DEBUG=
+DJANGO_LOGLEVEL=INFO
+DJANGO_SECRET_KEY=asdkosdoisjaisijxfldfk
+DJANGO_DEBUG=1
 DJANGO_ALLOWED_HOSTS=
